--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .App {
   text-align: center;
-  background: url("http://img1.imgtn.bdimg.com/it/u=619035232,399014571&fm=27&gp=0.jpg");
+  background-color: gainsboro;
 }
 
 .App-logo {
